# ninja-runtime

./: CMakeLists.txt  index.js  package.json
.github/workflows/: integrate.yml  prebuild.yml  publish.yml
lib/: spawn.js
npm/darwin-arm64/: package.json
npm/darwin-universal/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-arm64/: index.js  package.json
npm/win32-x64/: package.json
